<resources>
    <string name="app_name">PemesananTelur</string>
    <string name="logo">logo</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password?</string>
    <string name="imagecontent">imageContent</string>
    <string name="telor_ayam_negri">Telor Ayam Negri</string>
    <string name="lorem">The placeholder text, beginning with the line “Lorem ipsum dolor sit amet, consectetur adipiscing elit”, looks like Latin because in its youth, centuries ago, it was Latin. Richard McClintock, a Latin scholar from Hampden-Sydney College, is credited with discovering the source behind the ubiquitous filler text.</string>
    <string name="buy">Beli Produk</string>
    <string name="minus">-</string>
    <string name="_0">0</string>
    <string name="plus">+</string>
    <string name="subTotal">SubTotal</string>
    <string name="bayar">Bayar</string>
    <string name="rp29_800">Rp29.800/Peti</string>
    <string name="belum_ada_daftar_belanja">Belum ada Daftar Belanja</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_maps">Map</string>
    <string name="akun">Akun</string>
    <string name="tentang">Tentang</string>
    <string name="transaksi">Transaksi</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="email">Email</string>
    <string name="nama_depan">Nama Depan</string>
    <string name="nama_belakang">Nama Belakang</string>
    <string name="silahkan_tunggu">Silahkan Tunggu..</string>
    <string name="logout">Logout</string>
    <string name="produk">Produk</string>
    <string name="beli">Beli</string>
    <string name="verifikasi">Verifikasi</string>
    <string name="token">Token</string>
    <string name="register">Register</string>
    <string name="lengkapi_data">Lengkapi Data</string>
    <string name="nama_agent">Nama Agent</string>
    <string name="simpan">Simpan</string>
    <string name="ubah">Ubah</string>
    <string name="old_pass">Password Lama</string>
    <string name="new_password">Password Baru</string>
    <string name="konfirmasi_password">Konfirmasi Password</string>
    <string name="message_email">Email Anda Belum Terverifikasi</string>
    <string name="message_email2">Ingin Verifikasi Email ?</string>
    <string name="pt">PT Moeladi Peternakan</string>
    <string name="ongkos_kirim">Ongkos Kirim</string>
    <string name="total_harga">Total Harga</string>
    <string name="rincian_harga">Rincian Harga</string>
    <string name="daftar_belanja">Daftar Belanja</string>
    <string name="total_pembayaran">Total Pembayaran</string>
    <string name="mulai_pesan">Mulai Pesan</string>
    <string name="alamat_pengiriman">Alamat Pengiriman</string>
    <string name="kualitas">Kualitas</string>
    <string name="apakah_anda_yakin">Apakah Anda Yakin ?</string>
    <string name="tidak_ada_transaksi">Tidak Ada Transaksi</string>
    <string name="nama_produk">Nama Produk</string>
    <string name="quality">Quality</string>
    <string name="notelp">NoTelp</string>
    <string name="status">Status</string>
    <string name="nomor_transaksi">Nomor Transaksi</string>
    <string name="nomor_telepon">Nomor Telepon</string>
    <string name="tanggal_order">Tanggal Order</string>
    <string name="jumlah_beli">Jumlah Beli</string>
    <string name="latar_belakang">Indonesia merupakan negara dengan penduduk terpadat ke-3 didunia setelah China dan India, dan seiring dengan meningkatnya taraf hidup masyarakat maka kebutuhan protein hewani terutama dari telur merupakan komoditas alternatif untuk mensuplai kebutuhan protein hewani masyarakat yg relatif murah.

Konsumsi per kapita produk telur ayam di Indonesia rata-rata hanya 87 butir/thn, jauh dibawah Thailand yang mencapai 145 butir/thn, China 304 butir/thn dan Malaysia yang sudah mencapai 311 butir / tahun.

Berdasarkan realitas tersebut diatas PT Moeladi Peternakan Magelang bertekad mengembangkan usaha peternakan ayam Petelur dengan pertimbangan aspek teknis, aspek ekonomi dan aspek sosial yang masih memiliki prospek yang bagus untuk jangka pendek, menengah maupun jangka panjang.</string>
    <string name="visi_dan_misi">Visi Dan Misi</string>
    <string name="latartxt">Latar Belakang</string>

    <string-array name="visiandmisi">
        <item>Menjadi perusahaan perunggasan petelur yang tangguh, yang sesuai dengan 5 prinsip syariah Islam ( halal / non riba ), ramah lingkungan, berperan nyata dalam pemenuhan kebutuhan protein hewani asal unggas dan dalam penyediaan lapangan kerja bagi masyaraka</item>
        <item>Menyelenggarakan kegiatan di semua aspek dengan managemen yang sesuai dengan 5 prinsip syariah Islam sehingga akan tercapai sebuah usaha yang halal/non riba dan berkah, sesuai dengan Standar Operasional Prosedur sehingga mencapai nilai efisiensi yang optimal.</item>
        <item>Mewujudkan pengelolaan farm yang ramah lingkungan dengan memperhatikan pengelolaan limbah yang tidak menimbulkan polusi bagi lingkungan.</item>
        <item>Mampu berkompetisi dengan perusahaan perunggasan sejenis dengan menerapkan managemen “zero defect” secara bertahap dan berkelanjutan.</item>
        <item>Menyerap tenaga kerja yang sebagian besar berasal dari lingkungan sekitar dan tenaga yang berkompeten di bidangnya.</item>
        <item>Menjaga hubungan baik dengan semua mitra kerja ( pelanggan, suplier, perbankan, penyewa, dll ) dan juga dengan institusi pendidikan.</item>
    </string-array>
</resources>
