<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/m_home"
        android:icon="@drawable/ic_home"
        android:title="@string/produk"
        app:showAsAction="ifRoom" />
    <item
        android:icon="@drawable/ic_transaksi"
        android:id="@+id/m_transaksi"
        android:title="@string/transaksi"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/m_account"
        android:title="@string/akun"
        android:icon="@drawable/ic_person"
        app:showAsAction="ifRoom" />
    <item
        android:icon="@drawable/ic_about"
        android:id="@+id/m_about"
        android:title="@string/tentang"
        app:showAsAction="ifRoom" />


</menu>