<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical"
    tools:context=".ui.home.fragment.aboutfragment.AboutFragment">

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_horizontal"
        android:layout_marginRight="@dimen/margin_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_horizontal"
            android:text="@string/latartxt"
            android:textColor="@color/black"
            android:textSize="@dimen/text_product"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top"
            android:text="@string/latar_belakang" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_horizontal"
            android:text="@string/visi_dan_misi"
            android:textColor="@color/black"
            android:textSize="@dimen/text_product"
            android:textStyle="bold" />
    </LinearLayout>
</ScrollView>