<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <CheckBox
            android:layout_marginStart="@dimen/margin_horizontal"
            android:layout_marginLeft="@dimen/margin_horizontal"
            android:layout_marginEnd="@dimen/margin_horizontal"
            android:layout_marginRight="@dimen/margin_horizontal"
            android:id="@+id/checkProduct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_vertical"
            android:padding="@dimen/contentPadding"
            android:text="@string/telor_ayam_negri"
            android:textSize="@dimen/text_product"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageProduct"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="@dimen/margin_vertical"
            android:layout_marginEnd="@dimen/margin_horizontal"
            android:layout_marginRight="@dimen/margin_horizontal"
            android:contentDescription="@string/imagecontent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/btnTrash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_vertical"
            android:layout_marginEnd="@dimen/margin_vertical"
            android:layout_marginRight="@dimen/margin_vertical"
            android:background="@color/transparent"
            android:contentDescription="@string/imagecontent"
            android:src="@drawable/ic_icons8_trash"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageProduct" />
        <LinearLayout
            android:layout_marginStart="@dimen/margin_horizontal"
            android:layout_marginLeft="@dimen/margin_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_vertical"
            android:layout_marginBottom="8dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkProduct">

            <Button
                android:id="@+id/btnMinus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/minus"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/txtAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/_0"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btnPlus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plus"
                android:textSize="20sp" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bg_cart"
        >

        <TextView
            android:layout_marginStart="@dimen/margin_horizontal"
            android:layout_marginLeft="@dimen/margin_horizontal"
            android:layout_marginTop="@dimen/margin_vertical"
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subTotal"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/subTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_vertical"
            android:layout_marginStart="@dimen/margin_horizontal"
            android:layout_marginLeft="@dimen/margin_horizontal"
            android:text="@string/rp29_800"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginBottom="@dimen/margin_vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <Button
            android:id="@+id/btnPay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_vertical"
            android:layout_marginEnd="@dimen/margin_horizontal"
            android:layout_marginRight="@dimen/margin_horizontal"
            android:layout_marginBottom="@dimen/margin_vertical"
            android:background="@drawable/bg_btn1"
            android:text="@string/bayar"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>