<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="12dp"
    android:clickable="true"
    android:background="@drawable/bg_row"
    android:paddingBottom="@dimen/margin_vertical"
    android:orientation="vertical"
    android:focusable="true">

    <ImageView
        android:id="@+id/imageProduct"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="@dimen/margin_horizontal"
        android:layout_marginLeft="@dimen/margin_horizontal"
        android:layout_marginTop="@dimen/margin_vertical"
        android:layout_marginBottom="@dimen/margin_vertical"
        android:contentDescription="@string/imagecontent"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_horizontal"
        android:layout_marginLeft="@dimen/margin_horizontal"
        android:text="@string/telor_ayam_negri"
        android:textColor="@color/black"
        android:textSize="@dimen/text_product"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageProduct"
        app:layout_constraintTop_toTopOf="@+id/imageProduct" />

    <TextView
        android:id="@+id/txtPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_horizontal"
        android:layout_marginLeft="@dimen/margin_horizontal"
        android:layout_marginTop="@dimen/margin_vertical"
        android:text="@string/rp29_800"
        android:textColor="@color/grey"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageProduct"
        app:layout_constraintTop_toBottomOf="@+id/txtName" />

    <Button
        android:id="@+id/btn_buy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="@dimen/margin_horizontal"
        android:layout_marginRight="@dimen/margin_horizontal"
        android:background="@color/colorPrimary"
        android:text="@string/beli"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/txtPrice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtName" />

</androidx.constraintlayout.widget.ConstraintLayout>