<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login"
    tools:context=".ui.regis.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_login_replace" />


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_vertical"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/edt_username"
        android:drawableStart="@drawable/ic_person"
        android:drawableLeft="@drawable/ic_person"
        android:hint="@string/username"
        android:inputType="text"
        android:padding="@dimen/padding_edt"
        android:layout_marginTop="50dp"
        style="@style/editText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        tools:ignore="Autofill" />

    <View
        android:id="@+id/line3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="@dimen/margin_horizontal"
        android:layout_marginLeft="@dimen/margin_horizontal"
        android:layout_marginEnd="@dimen/margin_horizontal"
        android:layout_marginRight="@dimen/margin_horizontal"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_username" />

    <EditText
        android:id="@+id/edtFirstName"
        android:drawableStart="@drawable/ic_person"
        android:drawableLeft="@drawable/ic_person"
        android:hint="@string/nama_depan"
        android:inputType="text"
        style="@style/editText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line3"
        tools:ignore="Autofill" />



    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="@dimen/margin_horizontal"
        android:layout_marginLeft="@dimen/margin_horizontal"
        android:layout_marginEnd="@dimen/margin_horizontal"
        android:layout_marginRight="@dimen/margin_horizontal"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtFirstName" />

    <EditText
        tools:ignore="Autofill"
        android:id="@+id/edtLastName"
        style="@style/editText"
        android:inputType="text"
        android:background="@color/white_transparent"
        android:drawableStart="@drawable/ic_person"
        android:drawableLeft="@drawable/ic_email"
        android:hint="@string/nama_belakang"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line" />



    <View
        android:id="@+id/line5"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="@dimen/margin_horizontal"
        android:layout_marginLeft="@dimen/margin_horizontal"
        android:layout_marginEnd="@dimen/margin_horizontal"
        android:layout_marginRight="@dimen/margin_horizontal"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtLastName" />

    <EditText
        android:id="@+id/edt_email"
        android:drawableStart="@drawable/ic_email"
        android:drawableLeft="@drawable/ic_email"
        android:hint="@string/email"
        tools:ignore="Autofill"
        android:inputType="textEmailAddress"
        style="@style/editText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line5"
        />

    <View
        android:id="@+id/line2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="@dimen/margin_horizontal"
        android:layout_marginLeft="@dimen/margin_horizontal"
        android:layout_marginEnd="@dimen/margin_horizontal"
        android:layout_marginRight="@dimen/margin_horizontal"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_email" />

    <EditText
        android:id="@+id/edt_password"
        android:drawableStart="@drawable/ic_lock"
        android:drawableLeft="@drawable/ic_lock"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        style="@style/editText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line2"
        tools:ignore="UnusedAttribute" />

    <Button
        android:id="@+id/btn_sign_up"
        style="@style/ButtonStyle"
        android:layout_marginTop="@dimen/margin_vertical"
        android:background="@color/blue"
        android:text="@string/sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_password" />

</androidx.constraintlayout.widget.ConstraintLayout>